--- a/TD Portfolio.xcodeproj/xcshareddata/xcschemes/TD Portfolio.xcscheme
+++ b/TD Portfolio.xcodeproj/xcshareddata/xcschemes/TD Portfolio.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "E92E40C6255EE7E3002F0ABF"
+            BuildableName = "TD Portfolio.app"
+            BlueprintName = "TD Portfolio"
+            ReferencedContainer = "container:TD Portfolio.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
       </Testables>
    </TestAction>
