Offering in-app purchases, part 1

--- a/TDPortfolio.xcodeproj/xcshareddata/xcschemes/TD Portfolio.xcscheme
+++ b/TDPortfolio.xcodeproj/xcshareddata/xcschemes/TD Portfolio.xcscheme
@@ -65,7 +65,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = "hu"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -83,6 +82,9 @@
             ReferencedContainer = "container:TDPortfolio.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../TDPortfolio/Configuration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
