Integrating with Shortcuts

--- a/TDPortfolio/Configuration/Info.plist
+++ b/TDPortfolio/Configuration/Info.plist
@@ -8,6 +8,10 @@
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>design.td540.TD-Portfolio.newProject</string>
+	</array>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
